# gravitysimulator

./: CMakeLists.txt  README.md  vcpk.json
assets/shaders/: lensing.frag
docs/: devlog.md  integrators.md  physics.md
src/: Body.cpp  Body.h  Body.h.cpp  Presets.h.cpp  Renderer.cpp  Renderer.h.cpp  Simulation.cpp  Simulation.h.cpp  UI.cpp  UI.h.cpp  Vec2.h.cpp  Vector2.cpp  Vector2.h  main.cpp
